# adventure-game

./: .coverage  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  server.py
.cursor/plans/: p1_growth_ending_upgrade_50efd8b2.plan.md
.trae/documents/: generate-novel-feature-plan.md
app/: config.py  container.py  errors.py  game_context.py  http_client.py  logging_config.py  request_context.py
app/api/: achievement_routes.py  character_routes.py  check_routes.py  game_routes.py  item_routes.py  novel_routes.py  player_routes.py  save_routes.py
app/llm/: __init__.py  adapter.py  parser.py
app/middleware/: request_lifecycle_middleware.py  session_middleware.py
app/models/: __init__.py  character.py  chat.py  check.py  novel.py  player.py  save.py
app/prompts/: __init__.py
app/repositories/: __init__.py  base.py  character_repository.py  game_repository.py  llm_log_repository.py  novel_repository.py  save_repository.py  session_repository.py
app/services/: __init__.py  achievement_service.py  character_service.py  chat_parser.py  check_service.py  game_service.py  item_service.py  llm_gateway.py  novel_service.py  player_service.py  prompt_composer.py  save_service.py
app/utils/: atomic_io.py  file_storage.py  game_manager.py  history_round_count.py  json_utils.py  llm_client.py  memory_utils.py  (+1 more)
memory/: memory.md
scripts/: migrate_data.py  run_real_e2e_test.sh  run_regression_tests.sh  test_game_isolation.py
tests/: conftest.py  test_api.py
(+9 files in other folders)
